# canonical-interp

./: LICENSE  README.md  main.py  pyproject.toml  test_known_rlct.py  test_llc.py
.github/workflows/: publish.yml
canonical_interp/: __init__.py  optim.py  slt.py
src/canonical_interp/: __init__.py  gridsearch.py  optim.py  slt.py  utils.py
tests/: conftest.py  test_estimator.py  test_integration.py  test_known_rlct.py  test_llc.py  test_sgld_step.py
