[project]
name = "canonical-interp"
version = "0.1.1"
description = "Efficient tooling for Developmental Interpretability"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "devinterp>=1.3.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]
license = "MIT"
authors = [
  { name="Sam Baumohl", email="sam@baumohl.dev" },
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build >= 0.10.10, <0.11.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/sbaumohl/canonical-interp"
Issues = "https://github.com/sbaumohl/canonical-interp/issues"
