[project]
name = "canonical-interp"
version = "0.2.5"
description = "Efficient tooling for Developmental Interpretability"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "torch>=2.8.0",
    "tqdm>=4.67.3",
]
license = "MIT"
authors = [
  { name="Sam Baumohl", email="sam@baumohl.dev" },
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build >= 0.10.10, <0.11.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/sbaumohl/canonical-interp"
Issues = "https://github.com/sbaumohl/canonical-interp/issues"
